# nutr

./: CMakeLists.txt
include/geometry/clover_array/2022-11-14_to_2022-11-24/: DetectorConstruction.hh
include/geometry/clover_array/2025-09-01/: DetectorConstruction.hh
include/geometry/clover_array/array/: LeadShieldingUTR_2022-11-14_to_2022-11-24.hh  Target140Ce.hh  Target90Zr.hh  Target92Mo.hh
src/geometry/clover_array/2022-11-14_to_2022-11-24/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2025-09-01/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstructionConfig.hh.in
src/geometry/clover_array/array/: CMakeLists.txt  LeadShieldingUTR_2022-11-14_to_2022-11-24.cc  Target140Ce.cc  Target90Zr.cc  Target92Mo.cc
